--- a/VidCoder/Resources/Translations/EnumsRes.tr.resx
+++ b/VidCoder/Resources/Translations/EnumsRes.tr.resx
@@ -172,7 +172,7 @@
     <value>Mekansal Denetimi Atla</value>
   </data>
   <data name="Deinterlace_Decomb" xml:space="preserve">
-    <value>Decomb</value>
+    <value>Taraksız</value>
   </data>
   <data name="Deinterlace_Yadif" xml:space="preserve">
     <value>Yadif</value>
