--- a/VidCoder/Resources/Translations/LogRes.tr.resx
+++ b/VidCoder/Resources/Translations/LogRes.tr.resx
@@ -121,6 +121,6 @@
     <value>Temizle</value>
   </data>
   <data name="LogWindowTitle" xml:space="preserve">
-    <value>İşlem Kaydı</value>
+    <value>Günlük</value>
   </data>
 </root>
