Added shortcut buttons to go to audio and subtitle picker options. Fixed shortcut button accessibility.

--- a/VidCoder/Resources/MainRes.resx
+++ b/VidCoder/Resources/MainRes.resx
@@ -670,4 +670,10 @@
   <data name="EncodeCompleteActionAbortedDueToErrorsMessage" xml:space="preserve">
     <value>Encode complete action not executed due to errors in the encode result list.</value>
   </data>
+  <data name="AudioPickerButtonToolTip" xml:space="preserve">
+    <value>Automatically pick audio tracks...</value>
+  </data>
+  <data name="SubtitlePickerButtonToolTip" xml:space="preserve">
+    <value>Automatically pick subtitle tracks...</value>
+  </data>
 </root>
